--- a/settings.yaml
+++ b/settings.yaml
@@ -5,27 +5,16 @@ ELMo: {
 ASSIN: {
   path: './datasets/ASSIN/',
   files: {
-    'train': 'assin-ptbr-train-hartmann.json'
-    'test': 'asssin-ptbr-test-gold-hartmann.json'
+    ptbr: {
+      'train': 'assin-ptbr-train-hartmann.json'
+      'test': 'asssin-ptbr-test-gold-hartmann.json'
+    }
   }
 }
 
-
-
-NILC_filenames: 'embeddings.txt'
-NILC_DIR: './embeddings/USP/'
-
-model_name: 'pt'
-PATH = './datasets/ASSIN/'
-files = {
-    'train' : 'assin-ptbr-train-hartmann.json',
-    'test' : 'assin-ptbr-test-gold-hartmann.json'
-}
-
 NILC: {
-  filenames: 'embeddings.txt',
   dir: './embeddings/USP/',  
-  sources: {
+  sources: [
     http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s50.zip,
     http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s100.zip,
     http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s300.zip,
@@ -61,4 +50,5 @@ NILC: {
     http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s300.zip,
     http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s600.zip,
     http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s1000.zip
-  }
+  ]
+}
