--- a/settings.yaml
+++ b/settings.yaml
@@ -4,9 +4,15 @@ ELMo: {
 
 ASSIN: {
   path: './datasets/ASSIN/',
+  entailment: {
+    -1: 'NONE',
+    0: 'NONE',
+    1: 'ENTAILMENT',
+    2: 'PARAPHRASE'
+  },
   files: {
     ptbr: {
-      'train': 'assin-ptbr-train-hartmann.json'
+      'train': 'assin-ptbr-train-hartmann.json',
       'test': 'asssin-ptbr-test-gold-hartmann.json'
     }
   }
@@ -15,40 +21,40 @@ ASSIN: {
 NILC: {
   dir: './embeddings/USP/',  
   sources: [
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s50.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s100.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s300.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s600.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s1000.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s50.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s100.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s300.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s600.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s1000.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s50.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s100.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s300.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s600.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s1000.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s50.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s100.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s300.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s600.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s1000.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s50.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s100.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s300.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s600.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s1000.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s50.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s100.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s300.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s600.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s1000.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s50.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s100.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s300.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s600.zip,
-    http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s1000.zip
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s50.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s100.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s300.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s600.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s1000.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s50.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s100.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s300.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s600.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/skip_s1000.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s50.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s100.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s300.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s600.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/cbow_s1000.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s50.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s100.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s300.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s600.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/fasttext/skip_s1000.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s50.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s100.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s300.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s600.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/cbow_s1000.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s50.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s100.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s300.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s600.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/wang2vec/skip_s1000.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s50.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s100.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s300.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s600.zip",
+    "http://143.107.183.175:22980/download.php?file=embeddings/glove/glove_s1000.zip"
   ]
 }
