--- a/settings.yaml
+++ b/settings.yaml
@@ -34,6 +34,7 @@ gensim: {
 
 NILC: {
   dir: './embeddings/USP/',  
+  analogies: './analogies/',
   sources: [
     "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s50.zip",
     "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s100.zip",
