--- a/settings.yaml
+++ b/settings.yaml
@@ -31,9 +31,14 @@ gensim: {
   'wait_interval': 1,
   'cores': 1
 }
+wikipedia: {
+  path: './datasets/wiki/',
+  dump: 'ptwiki-20190701-pages-articles-multistream.xml',
+  word_frequency: 'wordfreq.json'
+}
 
 NILC: {
-  dir: './embeddings/USP/',  
+  dir: './embeddings/USP/', 
   analogies: './analogies/',
   sources: [
     "http://143.107.183.175:22980/download.php?file=embeddings/word2vec/cbow_s50.zip",
