added frequency lib

--- a/tests.yaml
+++ b/tests.yaml
@@ -1,10 +1,10 @@
-ELMo: True
-NILC: True
-NILC_with_unk: True
-ELMo_NILC: True
-ELMo-SIF: True
+ELMo: False
+NILC: False
+NILC_with_unk: False
+ELMo_NILC: False
+ELMo-SIF: False
 NILC-SIF: True
-ELMo-SIF_NILC-SIF: True
-ELMo-SIF_NILC: True
-ELMo_NILC-SIF: True
-analogies: True
+ELMo-SIF_NILC-SIF: False
+ELMo-SIF_NILC: False
+ELMo_NILC-SIF: False
+analogies: False
