--- a/sentence_similarity/tests.yaml
+++ b/sentence_similarity/tests.yaml
@@ -7,7 +7,7 @@ queue: [
 
 2: {
   template: "bert",
-  test_name: "BERT",
+  test_name: "BERT_layer11",
   langs: ["ptbr", "pteu"],
   params: {
     gensim_sif: False,
