--- a/settings/nilc_custom1.yaml
+++ b/settings/nilc_custom1.yaml
@@ -1,13 +1,13 @@
 
 queue: [
   # 1,
-  2,
+  # 2,
   # 3,
   # 4,
   # 5,
   # 6,
   # 7,
-  # 8,
+  8,
   # 9
   ]
 
@@ -111,7 +111,7 @@ queue: [
 
 8: {
   template: "flair-custom-1",
-  test_name: "ELMo",
+  test_name: "ELMo_custom1",
   langs: ["ptbr", "pteu", "assin2"],
   params: {
     gensim_sif: False,
@@ -125,7 +125,7 @@ queue: [
 
 9: {
   template: "flair-custom-2",
-  test_name: "ELMo",
+  test_name: "ELMo_custom2",
   langs: ["ptbr", "pteu", "assin2"],
   params: {
     gensim_sif: False,
