--- a/settings/elmo_nilc_custom1_part1.yaml
+++ b/settings/elmo_nilc_custom1_part1.yaml
@@ -1,7 +1,5 @@
 
-queue: [
-  1,
-  ]
+queue: [ 1 ]
 
 1: {
   template: "custom-flair-gensim-1",
@@ -16,6 +14,4 @@ queue: [
     a: 0.001,
     unk: False
   }
-}
-
 }
