--- a/settings/nilc_with_unk_part2.yaml
+++ b/settings/nilc_with_unk_part2.yaml
@@ -1,7 +1,5 @@
 
-queue: [
-  1,
-  ]
+queue: [ 1 ]
 
 1: {
   template: "gensim",
@@ -16,6 +14,4 @@ queue: [
     a: 0.001,
     unk: True
   }
-}
-
 }
