--- a/settings/elmo_nilc_part2.yaml
+++ b/settings/elmo_nilc_part2.yaml
@@ -2,8 +2,8 @@
 queue: [ 1 ]
 
 1: {
-  template: "custom-flair-gensim-2",
-  test_name: "ELMo_NILC_custom2_part2",
+  template: "flair-gensim",
+  test_name: "ELMo_NILC_part2",
   langs: ["ptbr", "pteu", "assin2"],
   skip_list: ["wang2vec", "word2vec"],
   params: {
