--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ embeddings/NILC_old/
 embeddings/NILC_old2/
 embeddings/elmo/
 embeddings/bert/
+embeddings/allen_elmo/
 
 # System files
 embeddings/.ipynb*
