--- a/settings/elmo_nilc_part1.yaml
+++ b/settings/elmo_nilc_part1.yaml
@@ -2,7 +2,7 @@
 queue: [ 1 ]
 
 1: {
-  template: "flair-gensim-local",
+  template: "flair-gensim",
   test_name: "ELMo_NILC_part1",
   langs: ["ptbr", "pteu", "assin2"],
   skip_list: ["fasttext", "glove"],
